# goit-pythonweb-hw-03

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  error.html  index.html  main.py  message.html  pyproject.toml
storage/: data.json
template/: template.jinja
templates/: error.html  index.html  message.html
