[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Description"
authors = ["<you@example.com"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.6"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"